# JamSplitter

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.api  Dockerfile.cuda  Dockerfile.dev  Dockerfile.prod  Dockerfile.rocm  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  __main__.py  app.py  cache.db  docker-compose.cloudflared.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  justfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
app/: __init__.py  main.py
app/routes/: __init__.py  api.py  health.py  pages.py
app/utils/: __init__.py  audio_processor.py  config.py  database.py  logger.py  tasks.py
config/: logging.yaml
deploy/: README.md
deploy/aws/: main.tf  outputs.tf  variables.tf
deploy/kubernetes/: Chart.yaml  deployment.yaml
src/: config.py  exceptions.py
src/audio_processing/: lyrics_generator.py  stem_separator.py
src/core/: video_processor.py
src/database/: database.py  schema.sql
src/sharing/: __init__.py
src/utils/: logging.py  monitoring.py
static/css/: style.css
static/js/: app.js
templates/: index.html
templates/docs/: api.html
templates/errors/: 404.html  500.html
templates/layouts/: base.html
templates/pages/: about.html  home.html
tests/: conftest.py  test_api.py  test_cache.py  test_cli_integration.py  test_stem_splitter.py
tests/data/: test_data.json
tests/utils/: test_utils.py
tools/: lyrics_tool.py  spotify_tool.py  youtube_stem_tool.py
utils/: cache.py  stem_splitter.py
